Migrate from javax.ws.rs to jakarta.ws.rs (#260)